syntax = "proto3";

package airWaterTrackerService;

option java_multiple_files = true;
option java_package = "com.caproject.protos";
option java_outer_classname = "AirInformationServiceImpl";

// Interface exported by the server.
service AirInformationService {
    rpc GetCarbonMonoxideLevel(stream AirInfoRequest) returns (stream AirInfoResponse) {}
    rpc ActivateFilter(ActivateFilterRequest) returns (ActivateFilterResponse) {}
}


message AirInfoRequest {
  int32 locationId = 1;
}

message AirInfoResponse {
  string zoneName = 1;
  double carbonMonoxideLevel = 2;
  string airQualityStatus = 3;
}

message ActivateFilterRequest {
  int32 filterId = 1;
}

message ActivateFilterResponse {
  int32 filterId = 1;
  bool filterStatus = 2;
}





